fix z-index issue with hover effect

--- a/main.css
+++ b/main.css
@@ -21,7 +21,6 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -1; /* Keep it behind all other content */
   pointer-events: none;
   transform: translateZ(0); /* Creates a new stacking context */
 }
@@ -81,7 +80,6 @@ section {
 
 section {
   scroll-margin-top: 80px; /* Adjust based on your navbar's height */
-  z-index: -2;
 }
 
 #intro {
@@ -240,7 +238,6 @@ section h2 {
   border-radius: 15px;
   padding-top: 2%;
   padding-bottom: 2%;
-  z-index: 1;
 }
 
 #flask-icon {
@@ -317,7 +314,6 @@ section h2 {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   margin: auto;
   max-height: 700px;
-  z-index: 1;
 }
 
 
